--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,16 @@ th {
 
 /* Footer styles */
 .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #333;
     color: #fff;
     padding: 20px 0;
     text-align: center;
+}
+
+.footer p {
+    margin: 0;
 }
